--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -13,7 +13,7 @@
    secretEnv: ['USERNAME']
  - name: 'gcr.io/cloud-builders/docker'
    entrypoint: 'bash'
-   args: ['-c', 'docker push $$USERNAME/pylon:1.0.2']
+   args: ['-c', 'docker push $$USERNAME/pylon:latest']
    secretEnv: ['USERNAME']
  availableSecrets:
    secretManager:
