--- a/frontend2/package.json
+++ b/frontend2/package.json
@@ -4,17 +4,19 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --host",
+    "dev": "vite --host 0.0.0.0 --port 3001",
     "build": "vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@smui/snackbar": "^7.0.0-beta.0",
     "@sveltejs/vite-plugin-svelte": "^1.1.0",
     "svelte": "^3.52.0",
     "vite": "^3.2.0"
   },
   "dependencies": {
     "svelte-material-ui": "^7.0.0-beta.0",
+    "svelte-preprocess": "^4.10.7",
     "svelte-spa-router": "^3.3.0"
   }
 }
