--- a/frontend2/package.json
+++ b/frontend2/package.json
@@ -6,11 +6,15 @@
   "scripts": {
     "dev": "vite --host 0.0.0.0 --port 3001",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prepare": "npm --prefix /pylon run smui-theme-light && npm --prefix /pylon run smui-theme-dark",
+    "smui-theme-light": "smui-theme compile smui.css -i src/theme",
+    "smui-theme-dark": "smui-theme compile smui-dark.css -i src/theme/dark"
   },
   "devDependencies": {
     "@smui/snackbar": "^7.0.0-beta.0",
     "@sveltejs/vite-plugin-svelte": "^1.1.0",
+    "smui-theme": "^7.0.0-beta.0",
     "svelte": "^3.52.0",
     "vite": "^3.2.0"
   },
