--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,61 +1,26 @@
 {
   "name": "pylon",
-  "version": "0.1.0",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "serve": "vue-cli-service serve --host 0.0.0.0 --port 8080",
-    "build": "vue-cli-service build",
-    "test": "vue-cli-service build --mode development",
-    "lint": "vue-cli-service lint"
-  },
-  "dependencies": {
-    "axios": "^0.19.2",
-    "core-js": "^3.3.2",
-    "vue": "^2.6.10",
-    "vue-router": "^3.1.3",
-    "vuetify": "^2.1.0",
-    "vuex": "^3.1.1"
+    "dev": "vite --host 0.0.0.0 --port 3001",
+    "build": "vite build",
+    "preview": "vite preview",
+    "prepare": "npm --prefix /pylon run smui-theme-light && npm --prefix /pylon run smui-theme-dark",
+    "smui-theme-light": "smui-theme compile smui.css -i src/theme",
+    "smui-theme-dark": "smui-theme compile smui-dark.css -i src/theme/dark"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.0.0",
-    "@vue/cli-plugin-eslint": "^4.0.0",
-    "@vue/cli-service": "^4.0.0",
-    "babel-eslint": "^10.0.3",
-    "babel-plugin-transform-remove-console": "^6.9.4",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "sass": "^1.19.0",
-    "sass-loader": "^7.3.1",
-    "vue-cli-plugin-vuetify": "^1.1.1",
-    "vue-template-compiler": "^2.6.10",
-    "vuetify-loader": "^1.3.0"
+    "@smui/snackbar": "^7.0.0-beta.0",
+    "@sveltejs/vite-plugin-svelte": "^1.1.0",
+    "smui-theme": "^7.0.0-beta.0",
+    "svelte": "^3.52.0",
+    "vite": "^3.2.0"
   },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "rules": {
-      "no-console": "off",
-      "extends": [
-        "plugin:vue/base"
-      ]
-    },
-    "parserOptions": {
-      "parser": "babel-eslint"
-    }
-  },
-  "postcss": {
-    "plugins": {
-      "autoprefixer": {}
-    }
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions"
-  ]
+  "dependencies": {
+    "svelte-material-ui": "^7.0.0-beta.0",
+    "svelte-preprocess": "^4.10.7",
+    "svelte-spa-router": "^3.3.0"
+  }
 }
